# webot

./: AGENTS.md  LICENSE  README.md  pyproject.toml
src/webot/: __init__.py  config.py  main.py  utils.py
src/webot/skills/: __init__.py  click_skill.py  input_skill.py  scroll_skill.py  wait_skill.py  window_skill.py
test/: t_diff_pic.py  t_enviroment_verify.py  t_opencv_oper.py  t_opencv_stitcher.py  t_paddleocr_functional.py
